--- a/templates/upload.html
+++ b/templates/upload.html
@@ -53,9 +53,10 @@ https://templatemo.com/tm-548-training-studio
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                                 <li class="scroll-to-section"><a href="{{url_for('first')}}" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="{{url_for('login')}}">Login</a></li>
-							  <li class="scroll-to-section"><a href="{{url_for('upload')}}">Upload</a></li>
+                                 <li class="scroll-to-section"><a href="{{url_for('first')}}">Home</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('dashboard')}}">Predict</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('upload')}}" class="active">Upload</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('logout')}}">Logout</a></li>
 							 
                         </ul>        
                         <a class='menu-trigger'>
