--- a/templates/index.html
+++ b/templates/index.html
@@ -54,13 +54,12 @@ https://templatemo.com/tm-548-training-studio
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                                  
-                            <li class="scroll-to-section"><a href="{{url_for('login')}}">Login</a></li>
-							  <li class="scroll-to-section"><a href="{{url_for('upload')}}">Upload</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('dashboard')}}" class="active">Predict</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('upload')}}">Upload</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('performance')}}">Analysis</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('chart')}}">Chart</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('logout')}}">Logout</a></li>
 							 
-							  	  <li class="scroll-to-section"><a href="{{url_for('home')}}">prediction</a></li>
-								   <li class="scroll-to-section"><a href="{{url_for('performance')}}">performance_analysis</a></li>
-								   <li class="scroll-to-section"><a href="{{url_for('chart')}}">Chart</a></li>
-								    <li class="scroll-to-section"><a href="{{url_for('first')}}">logout</a></li>
                         </ul>        
                         <a class='menu-trigger'>
                             <span>Menu</span>
