--- a/templates/login.html
+++ b/templates/login.html
@@ -53,9 +53,9 @@ https://templatemo.com/tm-548-training-studio
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                                   <li class="scroll-to-section"><a href="{{url_for('first')}}" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="{{url_for('login')}}">Login</a></li>
-							  <li class="scroll-to-section"><a href="{{url_for('upload')}}">Upload</a></li>
+                                   <li class="scroll-to-section"><a href="{{url_for('first')}}">Home</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('login')}}" class="active">Login</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('register')}}">Register</a></li>
 							 
                         </ul>        
                         <a class='menu-trigger'>
@@ -126,27 +126,8 @@ https://templatemo.com/tm-548-training-studio
             window.scrollTo(0, 1);
         }
 
-        function login(){
-        var uname = document.getElementById("uname").value;
-        var pwd = document.getElementById("pwd").value;
+        // Remove old JavaScript login function since we're using Flask forms now
 
-	if(uname == "admin" && pwd == "admin")
-	{
-	  alert("Login Success!");
-	  
-	  window.location = "{{url_for('upload')}}";
-	  return false;
-	}
-	else
-	{
-	alert("Invalid Credentials!")
-	}
-        }
-		
-		  
-
-
- 
     </script>
 	
 </head>
@@ -171,35 +152,51 @@ https://templatemo.com/tm-548-training-studio
 
         <!-- Portfolio Item 1 -->
         <div class="col-md-6 col-lg-4" style="margin-left:300px">
-		 <div class="control-group">
-			      <!-- Username -->
-				 
-			      <label class="control-label"   for="username"><b>Username</b></label>
-			      <div class="controls">
-			        <input type="text" id="uname" name="uname" placeholder="" class="form-control">
-			       
-				  </div>
-			    </div>
-			    <div class="control-group">
-			      <!-- Password-->
-				  
-			      <label class="control-label"  for="password"><b>Password</b></label>
-			      <div class="controls">
-			        <input type="password" id="pwd" name="pwd" placeholder="" class="form-control">
-			      
-				  </div>
-			    </div>
-				 <div class="col-md-6 col-lg-4" style="margin-left:-150px">
-			    <div class="control-group">
-			      <!-- Button -->
-				  <br>
-			      <div class="controls">
-				   
-			        <input type="button" class="btn btn-success" value="Login" style="margin-left: 230px" onclick="login()">
-			      
-				  </div>
-			    </div>
-				 </div>
+            
+            <!-- Flash Messages -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else 'success' if category == 'success' else 'info' }}" style="margin-bottom: 20px;">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            
+            <form method="POST" action="{{ url_for('login') }}">
+                <div class="control-group">
+                    <!-- Username -->
+                    <label class="control-label" for="username"><b>Username</b></label>
+                    <div class="controls">
+                        <input type="text" id="username" name="username" placeholder="Enter your username" class="form-control" required>
+                    </div>
+                </div>
+                <br>
+                <div class="control-group">
+                    <!-- Password-->
+                    <label class="control-label" for="password"><b>Password</b></label>
+                    <div class="controls">
+                        <input type="password" id="password" name="password" placeholder="Enter your password" class="form-control" required>
+                    </div>
+                </div>
+                <br>
+                <div class="control-group">
+                    <!-- Button -->
+                    <div class="controls">
+                        <input type="submit" class="btn btn-success" value="Login" style="margin-left: 200px; padding: 10px 30px;">
+                    </div>
+                </div>
+            </form>
+            
+            <!-- Register Link -->
+            <div class="control-group">
+                <div class="controls" style="text-align: center; margin-top: 20px;">
+                    <p style="color: #fff;">Don't have an account? 
+                        <a href="{{url_for('register')}}" style="color: #ed563b; font-weight: bold;">Register here</a>
+                    </p>
+                </div>
+            </div>
   </div>
   </div>
  
