--- a/templates/preview.html
+++ b/templates/preview.html
@@ -55,6 +55,7 @@ https://templatemo.com/tm-548-training-studio
                         <ul class="nav">
                                    <li class="scroll-to-section"><a href="{{url_for('first')}}" class="active">Home</a></li>
                             <li class="scroll-to-section"><a href="{{url_for('login')}}">Login</a></li>
+                            <li class="scroll-to-section"><a href="{{url_for('register')}}">Register</a></li>
 							  <li class="scroll-to-section"><a href="{{url_for('upload')}}">Upload</a></li>
 							 	  <li class="scroll-to-section"><a href="{{url_for('home')}}">Prediction</a></li>
                         </ul>        
