--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,14 @@ https://templatemo.com/tm-548-training-studio
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/font-awesome.css')}}">
 
     <link rel="stylesheet" href="{{url_for('static', filename='css/templatemo-training-studioss.css')}}">
+    
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/responsive.css')}}">
+    
+    <!-- Mobile optimization meta tags -->
+    <meta name="theme-color" content="#ed563b">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     </head>
     
@@ -126,16 +134,16 @@ background-color: #cccccc;
 </head>
 
 <body>
- <div>
+ <div class="prediction-form mobile-friendly">
       
  </br>
 <center>	<h1 class= "heading" >Road Accident Prediction</h1></center>
 	 
 	<div class= "container">
-    <form action="{{ url_for('predict')}}" method="post">
-             <div class="scrollable">
+    <form action="{{ url_for('predict')}}" method="post" class="prediction-form-wrapper">
+             <div class="scrollable table-responsive">
 			
-                <table>
+                <table class="prediction-table">
 				<tbody>
                     <td>State:</td>
 			<td>
@@ -334,6 +342,33 @@ background-color: #cccccc;
     
     <!-- Global Init -->
     <script src="{{url_for('static', filename='js/custom.js')}}"></script>
+    
+    <!-- Mobile Navigation Toggle -->
+    <script>
+    $(document).ready(function() {
+        // Mobile menu toggle
+        $('.menu-trigger').click(function() {
+            $(this).toggleClass('active');
+            $('.main-nav .nav').slideToggle();
+        });
+        
+        // Close mobile menu when clicking on a link
+        $('.main-nav .nav li a').click(function() {
+            if ($(window).width() < 768) {
+                $('.main-nav .nav').slideUp();
+                $('.menu-trigger').removeClass('active');
+            }
+        });
+        
+        // Handle window resize
+        $(window).resize(function() {
+            if ($(window).width() > 767) {
+                $('.main-nav .nav').removeAttr('style');
+                $('.menu-trigger').removeClass('active');
+            }
+        });
+    });
+    </script>
 
   </body>
 </html>
