--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,13 @@ https://templatemo.com/tm-548-training-studio
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/font-awesome.css')}}">
 
     <link rel="stylesheet" href="{{url_for('static', filename='css/templatemo-training-studioss.css')}}">
+    
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/responsive.css')}}">
+    
+    <!-- Mobile optimization meta tags -->
+    <meta name="theme-color" content="#ed563b">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     </head>
     
@@ -151,7 +158,7 @@ https://templatemo.com/tm-548-training-studio
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4" style="margin-left:300px">
+        <div class="col-md-6 col-lg-4 col-12" style="margin-left:300px">
             
             <!-- Flash Messages -->
             {% with messages = get_flashed_messages(with_categories=true) %}
@@ -164,8 +171,8 @@ https://templatemo.com/tm-548-training-studio
                 {% endif %}
             {% endwith %}
             
-            <form method="POST" action="{{ url_for('login') }}">
-                <div class="control-group">
+            <form method="POST" action="{{ url_for('login') }}" class="mobile-friendly-form">
+                <div class="control-group mb-mobile">
                     <!-- Username -->
                     <label class="control-label" for="username"><b>Username</b></label>
                     <div class="controls">
@@ -173,7 +180,7 @@ https://templatemo.com/tm-548-training-studio
                     </div>
                 </div>
                 <br>
-                <div class="control-group">
+                <div class="control-group mb-mobile">
                     <!-- Password-->
                     <label class="control-label" for="password"><b>Password</b></label>
                     <div class="controls">
@@ -181,7 +188,7 @@ https://templatemo.com/tm-548-training-studio
                     </div>
                 </div>
                 <br>
-                <div class="control-group">
+                <div class="control-group text-center-mobile">
                     <!-- Button -->
                     <div class="controls">
                         <input type="submit" class="btn btn-success" value="Login" style="margin-left: 200px; padding: 10px 30px;">
@@ -251,6 +258,30 @@ https://templatemo.com/tm-548-training-studio
     
     <!-- Global Init -->
     <script src="{{url_for('static', filename='js/custom.js')}}"></script>
+    
+    <!-- Mobile Navigation Toggle -->
+    <script>
+    $(document).ready(function() {
+        $('.menu-trigger').click(function() {
+            $(this).toggleClass('active');
+            $('.main-nav .nav').slideToggle();
+        });
+        
+        $('.main-nav .nav li a').click(function() {
+            if ($(window).width() < 768) {
+                $('.main-nav .nav').slideUp();
+                $('.menu-trigger').removeClass('active');
+            }
+        });
+        
+        $(window).resize(function() {
+            if ($(window).width() > 767) {
+                $('.main-nav .nav').removeAttr('style');
+                $('.menu-trigger').removeClass('active');
+            }
+        });
+    });
+    </script>
 
   </body>
 </html>
