--- a/templates/performance.html
+++ b/templates/performance.html
@@ -23,6 +23,13 @@ https://templatemo.com/tm-548-training-studio
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/font-awesome.css')}}">
 
     <link rel="stylesheet" href="{{url_for('static', filename='css/templatemo-training-studioss.css')}}">
+    
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/responsive.css')}}">
+    
+    <!-- Mobile optimization meta tags -->
+    <meta name="theme-color" content="#ed563b">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     </head>
     
