--- a/templates/register.html
+++ b/templates/register.html
@@ -23,6 +23,13 @@ https://templatemo.com/tm-548-training-studio
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/font-awesome.css')}}">
 
     <link rel="stylesheet" href="{{url_for('static', filename='css/templatemo-training-studioss.css')}}">
+    
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/responsive.css')}}">
+    
+    <!-- Mobile optimization meta tags -->
+    <meta name="theme-color" content="#ed563b">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     </head>
     
@@ -152,7 +159,7 @@ https://templatemo.com/tm-548-training-studio
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-8 col-lg-6" style="margin-left:250px">
+        <div class="col-md-8 col-lg-6 col-12" style="margin-left:250px">
             
             <!-- Flash Messages -->
             {% with messages = get_flashed_messages(with_categories=true) %}
@@ -165,9 +172,9 @@ https://templatemo.com/tm-548-training-studio
                 {% endif %}
             {% endwith %}
             
-            <form method="POST" action="{{ url_for('register') }}">
+            <form method="POST" action="{{ url_for('register') }}" class="mobile-friendly-form">
                 <!-- Full Name Field -->
-                <div class="control-group">
+                <div class="control-group mb-mobile">
                     <label class="control-label" for="fullname"><b>Full Name</b></label>
                     <div class="controls">
                         <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" class="form-control" required>
@@ -176,7 +183,7 @@ https://templatemo.com/tm-548-training-studio
                 <br>
                 
                 <!-- Email Field -->
-                <div class="control-group">
+                <div class="control-group mb-mobile">
                     <label class="control-label" for="email"><b>Email Address</b></label>
                     <div class="controls">
                         <input type="email" id="email" name="email" placeholder="Enter your email address" class="form-control" required>
@@ -185,7 +192,7 @@ https://templatemo.com/tm-548-training-studio
                 <br>
                 
                 <!-- Username Field -->
-                <div class="control-group">
+                <div class="control-group mb-mobile">
                     <label class="control-label" for="username"><b>Username</b></label>
                     <div class="controls">
                         <input type="text" id="username" name="username" placeholder="Choose a username" class="form-control" required>
@@ -194,7 +201,7 @@ https://templatemo.com/tm-548-training-studio
                 <br>
                 
                 <!-- Password Field -->
-                <div class="control-group">
+                <div class="control-group mb-mobile">
                     <label class="control-label" for="password"><b>Password</b></label>
                     <div class="controls">
                         <input type="password" id="password" name="password" placeholder="Create a password" class="form-control" minlength="6" required>
@@ -203,7 +210,7 @@ https://templatemo.com/tm-548-training-studio
                 <br>
                 
                 <!-- Confirm Password Field -->
-                <div class="control-group">
+                <div class="control-group mb-mobile">
                     <label class="control-label" for="confirm_password"><b>Confirm Password</b></label>
                     <div class="controls">
                         <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm your password" class="form-control" minlength="6" required>
@@ -212,7 +219,7 @@ https://templatemo.com/tm-548-training-studio
                 <br>
                 
                 <!-- Register Button -->
-                <div class="control-group">
+                <div class="control-group text-center-mobile">
                     <div class="controls">
                         <input type="submit" class="btn btn-success" value="Register" style="margin-left: 200px; padding: 10px 30px;">
                     </div>
@@ -282,6 +289,30 @@ https://templatemo.com/tm-548-training-studio
     
     <!-- Global Init -->
     <script src="{{url_for('static', filename='js/custom.js')}}"></script>
+    
+    <!-- Mobile Navigation Toggle -->
+    <script>
+    $(document).ready(function() {
+        $('.menu-trigger').click(function() {
+            $(this).toggleClass('active');
+            $('.main-nav .nav').slideToggle();
+        });
+        
+        $('.main-nav .nav li a').click(function() {
+            if ($(window).width() < 768) {
+                $('.main-nav .nav').slideUp();
+                $('.menu-trigger').removeClass('active');
+            }
+        });
+        
+        $(window).resize(function() {
+            if ($(window).width() > 767) {
+                $('.main-nav .nav').removeAttr('style');
+                $('.menu-trigger').removeClass('active');
+            }
+        });
+    });
+    </script>
 
   </body>
 </html>
